# snakedwi

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: bump_version.yml  main.yml  release.yml  test.yml  testing.yml
config/: config.yml  config_HCPA.yml  participants.tsv  snakebids.yml
docs/: conf.py  index.rst  requirements.txt
docs/getting_started/: installation.rst  workflows.rst
docs/usage/: app_cli.rst
etc/: run_prepdwi.sh  run_prepdwi_now.sh
snakedwi/: pipeline_description.json  run.py
snakedwi/config/: snakebids.yml
snakedwi/test_data/bids_AP_PA/: README  dataset_description.json
snakedwi/test_data/bids_AP_PA/sub-001/dwi/: sub-001_dir-AP_dwi.bval
snakedwi/test_data/bids_downsampled_1bzero/: participants.tsv
snakedwi/test_data/bids_downsampled_1bzero/sub-001/dwi/: sub-001_acq-LR_dwi.bvec  sub-001_acq-RL_dwi.bval
snakedwi/test_data/bids_downsampled_1bzero_1scan/sub-001/dwi/: sub-001_acq-AP_dwi.json
snakedwi/test_data/bids_multishell_downsampled/sub-001/dwi/: sub-001_acq-LR_dwi.bval  sub-001_acq-LR_dwi.bvec  sub-001_acq-RL_dwi.bvec  sub-001_acq-RL_dwi.json
snakedwi/test_data/bids_multishell_downsampled_1bzero/sub-001/dwi/: sub-001_acq-LR_dwi.bval  sub-001_acq-LR_dwi.json  sub-001_acq-RL_dwi.bvec
snakedwi/workflow/: Snakefile  get_templates.py
snakedwi/workflow/lib/: check_subj_dwi_metadata.py
snakedwi/workflow/notebooks/: eddy_qc.py.ipynb  vis_overlay_mask.py.ipynb
snakedwi/workflow/pipenvs/: snakedwi.txt
snakedwi/workflow/report/: brainmask_dwi.rst  eddy_qc.rst  reg_dwi_t1.rst  workflow.rst
snakedwi/workflow/rules/: bedpost.smk  common.smk  eddy.smk  gradcorrect.smk  mask_multishell.smk  masking_b0_synthstrip.smk  masking_b0_to_template.smk  masking_bet_from-b0.smk  motioncorr.smk  prepdwi.smk  qc_app.smk  reg_dwi_to_t1.smk  reg_t1_to_template.smk  sdc.smk  seg_t1_brain_tissue.smk  setup.smk  templateflow.smk  visqc.smk  workflowopts.smk
snakedwi/workflow/rules/anatomical/: anatomical.smk  reg_t1_to_template.smk  seg_t1_brain_tissue.smk
snakedwi/workflow/rules/diffusion/: bedpost.smk  eddy.smk  method_grabber.smk  motioncorr.smk  prepdwi.smk  reg_dwi_to_t1.smk
snakedwi/workflow/rules/diffusion/masking/: mask_multishell.smk  masking_b0_synthstrip.smk  masking_b0_to_template.smk  masking_bet_from-b0.smk
snakedwi/workflow/rules/diffusion/sdc/: sdcflow.smk  synb0.smk  synthsr.smk  topup.smk
snakedwi/workflow/schemas/: participants.schema.yml
snakedwi/workflow/scripts/: check_json_metadata.py  check_subj_dwi_metadata.py  concat_bv.py  concat_json.py  concat_tsv.py  create_missing_subj_tsv.py  displacement_field_to_fmap.py  get_eddy_index_txt.py  get_phase_encode_txt.py  get_shell_avg.py  get_shell_avgs.py  get_shell_vols.py  get_shells_from_bvals.py  get_slspec_txt.py  get_templates.py  map_channels_to_tissue.py  mrview_capture.sh  parallel  sdc_preproc.py  sdcflows_syn.py  split_pdf.py  vis_qc_dseg.py  vis_qc_probseg.py  vis_regqc.py  write_nii_resolution_to_txt.py
snakedwi/workflow/scripts/anatomical/: map_channels_to_tissue.py
snakedwi/workflow/scripts/diffusion/: concat_bv.py  get_phase_encode_txt.py  get_shell_avg.py  get_shell_avgs.py  get_shell_vols.py  get_shells_from_bvals.py  rotate_bvecs.sh
snakedwi/workflow/scripts/diffusion/bedpost/: bedpostx-parallel
snakedwi/workflow/scripts/diffusion/eddy/: get_eddy_index_txt.py  get_slspec_txt.py
snakedwi/workflow/scripts/diffusion/sdc/: displacement_field_to_fmap.py  get_synb0_phase_encode.py  sdcflows_syn.py
snakedwi/workflow/scripts/metadata/: check_subj_dwi_metadata.py  concat_subj_metadata.py  create_missing_subj_tsv.py  write_nii_resolution_to_txt.py
snakedwi/workflow/scripts/qc/: vis_qc_dseg.py  vis_qc_probseg.py  vis_regqc.py
test_data/bids_AP_PA/sub-001/dwi/: sub-001_dir-AP_dwi.bvec  sub-001_dir-AP_dwi.json  sub-001_dir-PA_dwi.bvec  sub-001_dir-PA_dwi.json
workflow/: Snakefile  get_templates.py
workflow/notebooks/: vis_overlay_mask.py.ipynb
workflow/rules/: mask_avgb0.smk  mask_multishell.smk  masking_b0_to_template.smk  masking_bet_from-b0.smk  prepdwi.smk  reg_dwi_to_t1.smk  reg_t1_to_template.smk  seg_t1_brain_tissue.smk  templateflow.smk  visqc.smk
workflow/schemas/: config.schema.yml
workflow/scripts/: concat_bv.py  get_shell_avg.py  get_shells_from_bvals.py  vis_qc_dseg.py
