[tool.poetry]
name = "snakedwi"
version = "0.1.0"
description = "snakedwi - BIDS app and snakemake workflow for dwi pre-processing"
authors = ["Ali Khan <alik@robarts.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
snakebids = "^0.6.0"
snakemake = "^7.0.0"
Pygments = "^2.12.0" #required for report-generation only
#snakeboost = "^0.2.0"
sdcflows = "^2.2.2"

[tool.poetry.dev-dependencies]
snakefmt = "^0.6.0"
poethepoet = "^0.10.0"
black = ">=22.1.0,<23.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
snakedwi = "snakedwi.run:main"


[tool.poe.tasks]
quality_check = { shell = "isort snakedwi/*.py -c && black snakedwi --check && snakefmt snakedwi --check" }
quality_fix = { shell = "isort snakedwi/*.py && black snakedwi  && snakefmt snakedwi" }

[tool.isort]
profile = "black"
multi_line_output = 3
