[tool.poetry]
name = "snakedwi"
version = "0.2.0-alpha"
description = "snakedwi - BIDS app and snakemake workflow for dwi pre-processing"
authors = ["Ali Khan <alik@robarts.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
snakebids = "^0.7.0"
#snakeboost = "^0.2.0"
Pygments = "^2.12.0" #required for report-generation only
sdcflows = "^2.2.2"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.10.0"
flake8 = "4.0"
black = "^22.1.0"
isort = "^5.10.1"
yamlfix = "^1.1.0"
snakefmt = "^0.6.0"

[tool.poetry.scripts]
snakedwi = "snakedwi.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
yamlfix = { shell = "find . -type f \\( -iname \\*.yaml -o -iname \\*.yml ! -iname snakemake* ! -iname snakebids* \\) -exec yamlfix {} \\;" }
yamlfix-check = { shell = "find . -type f \\( -iname \\*.yaml -o -iname \\*.yml ! -iname snakemake* ! -iname snakebids* \\) -exec yamlfix --check {} \\;" }
isort = "isort snakedwi"
isort-check = "isort -c snakedwi"
black = "black snakedwi"
black-check = "black --check snakedwi"
flake8 = "flake8 snakedwi"
snakefmt = "snakefmt snakedwi"
snakefmt-check = "snakefmt --check snakedwi"
quality_fix = ["yamlfix", "isort", "black", "flake8", "snakefmt"]
quality_check = [
    "yamlfix-check",
    "isort-check",
    "black-check",
    "flake8",
    "snakefmt-check",
]
test_topup = { shell = "snakedwi snakedwi/test_data/bids_AP_PA test_out participant -np" }
test = ["test_topup"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 79